quote already display, and change quote function

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>kanye.rest</title>
     </html>
 </head>
 <body>
     <h1>yeah, what kanye said</h1>
-    <button id="button">find quote</button>
+    <div id="quoteDisplay"></div>
+    <button id="button">new quote</button>
     <div id="quoteHere">
     </div>
 </body>
