--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    
     <title>kanye.rest</title>
     </html>
 </head>
@@ -17,5 +18,6 @@
     <div id="quoteDisplay"></div>
     <button id="button">new quote</button>
     <div id="quoteHere">
+<button id="tweet">tweet it</button>
     </div>
 </body>
