--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body>
     <h1>yeah, what kanye said</h1>
     <div id="quoteDisplay"></div>
-    <button id="button">new quote</button>
-    <div id="quoteHere">
-<button id="tweet">tweet it</button>
+    <div class="buttons"> 
+        <button id="button" class="first-button">new quote</button>
+    <!-- <div id="quoteHere"> -->
+        <button id="tweet" class="second-button">tweet it</button>
     </div>
 </body>
